--- a/src/components/ChessBoard/index.css
+++ b/src/components/ChessBoard/index.css
@@ -3,8 +3,45 @@
 .board-container{
     width: calc(100vh * 0.9);
     height: calc(100vh * 0.85);
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(8, calc((100vh * 0.9) / 8));
+    grid-template-rows: repeat(8, calc((100vh * 0.85) / 8));
 
 }
 
+.modal-bg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.modal-container{
+
+    width: calc(100vh * 0.9);
+    height: calc((100vh * 0.85)/2);
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgba(127,127,127,0.8);
+}
+
+.modal-con-hidden{
+    visibility: hidden;
+}
+.modal-img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.modal-img:hover{
+    cursor: pointer;
+    background-color: rgba(255,255,255,0.3);
+}
