--- a/src/components/BoardBox/index.css
+++ b/src/components/BoardBox/index.css
@@ -5,6 +5,7 @@
     justify-content: center;
 }
 
+
 .box-piece{
     background-repeat: no-repeat;
     background-position: center;
@@ -31,3 +32,11 @@
     background-color: #eeeed2;
 }
 
+.box-highlight::before{
+
+    content: " ";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(81, 203, 238, 0.4);
+
+}
