--- a/src/components/BoardBox/index.css
+++ b/src/components/BoardBox/index.css
@@ -12,6 +12,7 @@
     width: calc((100vh * 0.9) / 8);
     height: calc((100vh * 0.85) / 8);
     background-size: contain;
+   
 
 }
 
@@ -32,11 +33,18 @@
     background-color: #eeeed2;
 }
 
-.box-highlight::before{
+.box-highlight:not(.box-highlight-opp):before{
 
     content: " ";
-    width: 100%;
-    height: 100%;
+    width: calc((100vh * 0.9) / 8);
+    height: calc((100vh * 0.85) / 8);
     background-color: rgba(81, 203, 238, 0.4);
+}
 
+.box-highlight-opp::before{
+    position: absolute;
+    content: " ";
+    width: calc((100vh * 0.9) / 8);
+    height: calc((100vh * 0.85) / 8);
+    background-color: rgba(255, 87, 51, 0.4);
 }
