changed dimension for portrait device

--- a/src/components/BoardBox/index.css
+++ b/src/components/BoardBox/index.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow:hidden;
 }
 
 
@@ -12,8 +13,7 @@
     width: calc((100vh * 0.9) / 8);
     height: calc((100vh * 0.85) / 8);
     background-size: contain;
-   
-
+    overflow:hidden;
 }
 
 
@@ -47,4 +47,32 @@
     width: calc((100vh * 0.9) / 8);
     height: calc((100vh * 0.85) / 8);
     background-color: rgba(255, 87, 51, 0.4);
+}
+
+@media screen and (orientation: portrait){
+
+    .box-piece{
+        background-repeat: no-repeat;
+        background-position: center;
+        width: calc((100vw * 0.9) / 8);
+        height: calc((100vw * 0.85) / 8);
+        background-size: contain;
+    }
+
+    .box-highlight:not(.box-highlight-opp):before{
+
+        content: " ";
+        width: calc((100vw * 0.9) / 8);
+        height: calc((100vw * 0.85) / 8);
+        background-color: rgba(81, 203, 238, 0.4);
+    }
+    
+    .box-highlight-opp::before{
+        position: absolute;
+        content: " ";
+        width: calc((100vw * 0.9) / 8);
+        height: calc((100vw * 0.85) / 8);
+        background-color: rgba(255, 87, 51, 0.4);
+    }
+
 }
