--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,6 @@
     justify-content: center;
     align-items: center;
     background-color: #000000;
-    max-height: 100vh;
+    height: 90vh;
 
 }
